# simple-telegram-bot

./: CHANGELOG.md  LICENSE  README.md  simple-telegram-bot.cabal
app/: Main.hs  ]
scripts/: ema.sh
src/: Ema.hs  EmaImproved.hs
